--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <p>Meu primeiro Parágrafo</p>
         <p>Meu segundo Parágrafo</p>
         <p>Meu terceiro Parágrafo</p>
+        <p>Paragráfo incluido pelo Guthub</p>
     </body>
 </html>
